Add Product Deatil

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,6 +8,7 @@
 {% include 'partials/_alert.html' %}
 
 <!-- Showcase -->
+<!-- Showcase -->
 <section id="showcase" style="border:transparent 1px solid;">
   <div class="container text-center" style="border:transparent 1px solid;">
     <div id="sidebar">
