--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -19,7 +19,7 @@
       </li>
       {% for c in categories %}
         <li {% if category.slug == c.slug %}class="selected"{% endif %}>
-          <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+          <a href="{% url 'pages:product_list_by_category' c.slug %}">{{ c.name }}</a>
         </li>
       {% endfor %}
     </ul>
@@ -32,7 +32,7 @@
         <a href="{{ product.get_absolute_url }}">
           <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
         </a>
-        <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
+        <a href="{{product.get_absolute_url }}">{{ product.name }}</a>
         <br>
         ${{ product.price }}
       </div>
