home page update

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,7 @@
             Your cart is empty.
           {% endif %}
         {% endwith %}
+      </div>
     </div>
     <!-- conent -->
     {% block content %} {% endblock %}
