--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -28,7 +28,7 @@
 
             <div id="main" class="product-list" style="border:1px transparent solid;">   
               <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
-              <div class="row">
+              <div class="container" style="display:flex;flex-wrap:wrap;">
                 {% for product in products %}
                   <div class="item" style="border:1px transparent solid;">
                     <a href="{{ product.get_absolute_url }}">
@@ -44,7 +44,7 @@
           </div>
       </section>
     </div>
-    <div class="row" style="border:1px solid tansparent;">
+    <div class="row">
       <!-- index page bottom Consulting Services,Inpatient Services,Primary Care Package -->
       <section id="services" class="py-5 bg-secondary text-white">
         <div class="container">
