--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -29,7 +29,7 @@
             <div id="main" class="product-list" style="border:1px transparent solid;">   
               <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
               <div class="container" style="display:flex;flex-wrap:wrap;">
-                {% for product in products %}
+                {% for product in page.object_list %}
                   <div class="item" style="border:1px transparent solid;">
                     <a href="{{ product.get_absolute_url }}">
                       <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
@@ -43,6 +43,45 @@
             </div>
           </div>
       </section>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        {% if page.has_other_pages %}
+        <ul class="pagination">
+          {% if page.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page.previous_page_number }}">&laquo;</a>
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#">&laquo;</a>
+          </li>
+          {% endif %}
+          <!-- for loop page number -->
+          {% for i in page.paginator.page_range %}
+          <!-- page number -->
+          {% if page.number == i %}
+          <li class="page-item active">
+            <a class="page-link">{{ i }}</a>
+          </li>
+          {% else %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+          </li>
+          {% endif %}
+          {% endfor %}
+          {% if page.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page.next_page_number }}">&raquo;</a>
+          </li>
+          {% else %}
+          <li class="page-item disabled">
+            <a class="page-link" href="#">&raquo;</a>
+          </li>
+          {% endif %}
+        </ul>
+        {% endif %}
+      </div>
     </div>
     <div class="row">
       <!-- index page bottom Consulting Services,Inpatient Services,Primary Care Package -->
