--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -49,7 +49,11 @@
                   <i class="fas fa-sign-in-alt"></i>
                   Login</a>
               </li> -->
-            {% else %}            
+            {% else %}   
+              <li {% if 'password_reset' in request.path %} class="nav-item mr-3 active" {% else %}  class="nav-item mr-3" {% endif %}>
+                <a class="nav-link" href="{% url 'accounts:password_reset' %}">
+                  <i class="fas fa-user-plus"></i> Forgot password</a>
+              </li>
               <li {% if 'register' in request.path %} class="nav-item mr-3 active" {% else %}  class="nav-item mr-3" {% endif %}>
                 <a class="nav-link" href="{% url 'accounts:register' %}">
                   <i class="fas fa-user-plus"></i> Register</a>
